Fix calendar section overflow on mobile

--- a/src/css/calendar.css
+++ b/src/css/calendar.css
@@ -8,8 +8,8 @@
 .calendar_bg {
   content: ' ';
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 1;
   opacity: 0.3;
   background-image: url("../assets/img/roses.jpeg");
